
* GITHUB#13233: Add RomanianNormalizationFilter (Trey Jones, Robert Muir)

* GITHUB#13449: Sparse index: optional skip list on top of doc values which is exposed via the
  DocValuesSkipper abstraction. A new flag is added to FieldType.java that configures whether
  to create a "skip index" for doc values. (Ignacio Vera)

* GITHUB#13563: Add levels to doc values skip index. (Ignacio Vera)

Improvements
---------------------

* GITHUB#13246: Simplify bytes comparison as long comparison in NumericComparator. (Guo feng)

* LUCENE-10416: Update Korean Dictionary to mecab-ko-dic-2.1.1-20180720 for Nori.
  (Uihyun Kim)

* LUCENE-10614: Properly support getTopChildren in RangeFacetCounts. (Yuting Gan)

* LUCENE-10652: Add a top-n range faceting example to RangeFacetsExample. (Yuting Gan)

* GITHUB#12447: Hunspell: speed up the dictionary enumeration on suggestion (Peter Gromov)

* GITHUB#12873: Expressions module now uses JEP 371 "Hidden Classes" with JEP 309
  "Dynamic Class-File Constants" to implement Javascript expressions. (Uwe Schindler)

* GITHUB#11657, LUCENE-10621: Upgrade to OpenNLP 2.3.2. (Christine Poerschke, Eric Pugh)

* GITHUB#13209: Upgrade snowball to 26db1ab9. (Robert Muir)

* GITHUB#12172: Update Romanian stopwords list to include the modern unicode forms.  (Trey Jones)

Optimizations
---------------------

* GITHUB#11857, GITHUB#11859, GITHUB#11893, GITHUB#11909: Hunspell: improved suggestion performance (Peter Gromov)

* GITHUB#12825, GITHUB#12834: Hunspell: improved dictionary loading performance, allowed in-memory entry sorting.
  (Peter Gromov)

* GITHUB#12372: Reduce allocation during HNSW construction (Jonathan Ellis)

* GITHUB#12552: Make FSTPostingsFormat load FSTs off-heap. (Tony X)

Bug Fixes
---------------------

* LUCENE-10599: LogMergePolicy is more likely to keep merging segments until
  they reach the maximum merge size. (Adrien Grand)

* GITHUB#12220: Hunspell: disallow hidden title-case entries from compound middle/end
